tests/files/flow_controller_tests/should_run/051.cmdr
x = 1.0;
print ln(x);