tests/files/flow_controller_tests/should_fail/004.cmdr
//Should fail on modulo by 0.0
x = 1.0 % 0.0;